[package]
name = "just-coin-price"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.7"
poem-openapi = { version = "5.1.8", features = ["swagger-ui"] }
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
chrono = "0.4.24"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1.87"
